--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "routes": [
     {
-      "src": "/data",
-      "dest": "/data.json"
+      "src": "/SBMM",
+      "dest": "/SBMM.json"
     }
   ]
 }
